assignment/assignment2/assignment2/initial/target/main/bkit/parser/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Else'", "'EndFor'", 
                     "'If'", "'Var'", "'EndDo'", "'Break'", "'ElseIf'", 
                     "'EndWhile'", "'Parameter'", "'While'", "'Continue'", 
                     "'EndBody'", "'For'", "'Return'", "'True'", "'Do'", 
                     "'EndIf'", "'Function'", "'Then'", "'False'", "'+'", 
                     "'-'", "'*'", "'%'", "'\\'", "'-.'", "'\\.'", "'+.'", 
                     "'*.'", "'!'", "'||'", "'&&'", "'=='", "'<='", "'>.'", 
                     "'!='", "'>='", "'<=.'", "'<'", "'=/='", "'>=.'", "'>'", 
                     "'<.'", "'('", "')'", "'['", "']'", "':'", "'.'", "'_'", 
                     "','", "';'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "Identifier", "BODY", "ELSE", "ENDFOR", 
                      "IF", "VAR", "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", 
                      "PARAMETER", "WHILE", "CONTINUE", "ENDBODY", "FOR", 
                      "RETURN", "TRUE", "DO", "ENDIF", "FUNCTION", "THEN", 
                      "FALSE", "ADD", "SUB", "MUL", "MOD", "DIV", "SUBF", 
                      "DIVF", "ADDF", "MULF", "NOT", "OR", "AND", "EQ", 
                      "LE", "GTF", "NE", "GE", "LEF", "LT", "NEF", "GEF", 
                      "GT", "LTF", "LB", "RB", "LSB", "RSB", "COLON", "DOT", 
                      "UNDERSCORE", "COMMA", "SEMI", "LP", "RP", "ASSIGN", 
                      "IntegerConstant", "FloatingConstant", "String", "COMMENT", 
                      "WS", "UNTERMINATED_COMMENT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_variableStatement = 1
    RULE_varList = 2
    RULE_varDeclaration = 3
    RULE_funcDeclaration = 4
    RULE_paraList = 5
    RULE_parameters = 6
    RULE_funcBody = 7
    RULE_statementList = 8
    RULE_statement = 9
    RULE_assignmentStatement = 10
    RULE_assignDeclaration = 11
    RULE_ifStatement = 12
    RULE_iterationStatement = 13
    RULE_forStatement = 14
    RULE_forCondition = 15
    RULE_forDeclaration = 16
    RULE_conditionExpr = 17
    RULE_updateExpr = 18
    RULE_whileStatement = 19
    RULE_doWhileStatement = 20
    RULE_jumpStatement = 21
    RULE_breakStatement = 22
    RULE_continueStatement = 23
    RULE_callStatement = 24
    RULE_functionCall = 25
    RULE_argumentList = 26
    RULE_returnStatement = 27
    RULE_expression = 28
    RULE_relationalOperator = 29
    RULE_logicalOrAndExpression = 30
    RULE_logicalOrAndOperator = 31
    RULE_additiveExpression = 32
    RULE_additiveOperator = 33
    RULE_multiplicativeExpression = 34
    RULE_multiplicativeOperator = 35
    RULE_logicalNotExpression = 36
    RULE_signExpression = 37
    RULE_signOperator = 38
    RULE_indexExpression = 39
    RULE_indexOperator = 40
    RULE_funcExpression = 41
    RULE_primaryExpression = 42
    RULE_literals = 43
    RULE_boolean = 44
    RULE_array = 45
    RULE_assignmentOperator = 46

    ruleNames =  [ "program", "variableStatement", "varList", "varDeclaration", 
                   "funcDeclaration", "paraList", "parameters", "funcBody", 
                   "statementList", "statement", "assignmentStatement", 
                   "assignDeclaration", "ifStatement", "iterationStatement", 
                   "forStatement", "forCondition", "forDeclaration", "conditionExpr", 
                   "updateExpr", "whileStatement", "doWhileStatement", "jumpStatement", 
                   "breakStatement", "continueStatement", "callStatement", 
                   "functionCall", "argumentList", "returnStatement", "expression", 
                   "relationalOperator", "logicalOrAndExpression", "logicalOrAndOperator", 
                   "additiveExpression", "additiveOperator", "multiplicativeExpression", 
                   "multiplicativeOperator", "logicalNotExpression", "signExpression", 
                   "signOperator", "indexExpression", "indexOperator", "funcExpression", 
                   "primaryExpression", "literals", "boolean", "array", 
                   "assignmentOperator" ]

    EOF = Token.EOF
    Identifier=1
    BODY=2
    ELSE=3
    ENDFOR=4
    IF=5
    VAR=6
    ENDDO=7
    BREAK=8
    ELSEIF=9
    ENDWHILE=10
    PARAMETER=11
    WHILE=12
    CONTINUE=13
    ENDBODY=14
    FOR=15
    RETURN=16
    TRUE=17
    DO=18
    ENDIF=19
    FUNCTION=20
    THEN=21
    FALSE=22
    ADD=23
    SUB=24
    MUL=25
    MOD=26
    DIV=27
    SUBF=28
    DIVF=29
    ADDF=30
    MULF=31
    NOT=32
    OR=33
    AND=34
    EQ=35
    LE=36
    GTF=37
    NE=38
    GE=39
    LEF=40
    LT=41
    NEF=42
    GEF=43
    GT=44
    LTF=45
    LB=46
    RB=47
    LSB=48
    RSB=49
    COLON=50
    DOT=51
    UNDERSCORE=52
    COMMA=53
    SEMI=54
    LP=55
    RP=56
    ASSIGN=57
    IntegerConstant=58
    FloatingConstant=59
    String=60
    COMMENT=61
    WS=62
    UNTERMINATED_COMMENT=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def variableStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableStatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableStatementContext,i)


        def funcDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FuncDeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.FuncDeclarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 94
                self.variableStatement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 100
                self.funcDeclaration()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_variableStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableStatement" ):
                return visitor.visitVariableStatement(self)
            else:
                return visitor.visitChildren(self)




    def variableStatement(self):

        localctx = BKITParser.VariableStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variableStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(BKITParser.VAR)
            self.state = 109
            self.match(BKITParser.COLON)
            self.state = 110
            self.varList()
            self.state = 111
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarList" ):
                return visitor.visitVarList(self)
            else:
                return visitor.visitChildren(self)




    def varList(self):

        localctx = BKITParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.varDeclaration()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 114
                self.match(BKITParser.COMMA)
                self.state = 115
                self.varDeclaration()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BKITParser.Identifier, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.IntegerConstant)
            else:
                return self.getToken(BKITParser.IntegerConstant, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literals(self):
            return self.getTypedRuleContext(BKITParser.LiteralsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = BKITParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(BKITParser.Identifier)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 122
                self.match(BKITParser.LSB)
                self.state = 123
                self.match(BKITParser.IntegerConstant)
                self.state = 124
                self.match(BKITParser.RSB)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 130
                self.match(BKITParser.ASSIGN)
                self.state = 131
                self.literals()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def Identifier(self):
            return self.getToken(BKITParser.Identifier, 0)

        def funcBody(self):
            return self.getTypedRuleContext(BKITParser.FuncBodyContext,0)


        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def paraList(self):
            return self.getTypedRuleContext(BKITParser.ParaListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclaration" ):
                return visitor.visitFuncDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def funcDeclaration(self):

        localctx = BKITParser.FuncDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(BKITParser.FUNCTION)
            self.state = 135
            self.match(BKITParser.COLON)
            self.state = 136
            self.match(BKITParser.Identifier)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 137
                self.match(BKITParser.PARAMETER)
                self.state = 138
                self.match(BKITParser.COLON)
                self.state = 139
                self.paraList()


            self.state = 142
            self.funcBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParametersContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParametersContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_paraList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaList" ):
                return visitor.visitParaList(self)
            else:
                return visitor.visitChildren(self)




    def paraList(self):

        localctx = BKITParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.parameters()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 145
                self.match(BKITParser.COMMA)
                self.state = 146
                self.parameters()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BKITParser.Identifier, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.IntegerConstant)
            else:
                return self.getToken(BKITParser.IntegerConstant, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = BKITParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(BKITParser.Identifier)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 153
                self.match(BKITParser.LSB)
                self.state = 154
                self.match(BKITParser.IntegerConstant)
                self.state = 155
                self.match(BKITParser.RSB)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_funcBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = BKITParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(BKITParser.BODY)
            self.state = 162
            self.match(BKITParser.COLON)
            self.state = 163
            self.statementList()
            self.state = 164
            self.match(BKITParser.ENDBODY)
            self.state = 165
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableStatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableStatementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_statementList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = BKITParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 167
                self.variableStatement()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 173
                    self.statement() 
                self.state = 178
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(BKITParser.AssignmentStatementContext,0)


        def iterationStatement(self):
            return self.getTypedRuleContext(BKITParser.IterationStatementContext,0)


        def jumpStatement(self):
            return self.getTypedRuleContext(BKITParser.JumpStatementContext,0)


        def callStatement(self):
            return self.getTypedRuleContext(BKITParser.CallStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(BKITParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(BKITParser.IfStatementContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BKITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.iterationStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.jumpStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 182
                self.callStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 183
                self.returnStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 184
                self.ifStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignDeclaration(self):
            return self.getTypedRuleContext(BKITParser.AssignDeclarationContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assignmentStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = BKITParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.assignDeclaration()
            self.state = 188
            self.match(BKITParser.ASSIGN)
            self.state = 189
            self.expression()
            self.state = 190
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BKITParser.Identifier, 0)

        def functionCall(self):
            return self.getTypedRuleContext(BKITParser.FunctionCallContext,0)


        def indexOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.IndexOperatorContext)
            else:
                return self.getTypedRuleContext(BKITParser.IndexOperatorContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_assignDeclaration
